<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VPNShare</string>
	<string name="connect_wifi">or connect to wifi</string>
	<string name="proxy_started">VPNShare started</string>
	<string name="proxy_stopped">VPNShare stopped</string>
	<string name="wifi_tethering">Turn ON Hotspot</string>
	<string name="vpnshareison">VPNShare is ON</string>
	<string name="vpnshareisoff">VPNShare is OFF</string>
	<string name="vpnshare">VPNShare</string>
	<string name="proxy_is_running">Proxy is running on:</string>
	<string name="step1">Step 1</string>
	<string name="step2">Step 2</string>
	<string name="step3">Step 3</string>
	<string name="step1txt">1. Connect another device to the Wifi network using the SSID/PASSWORD</string>
	<string name="step2txt">2. Setup up proxy on the connected device:</string>
	<string name="step3txt">Note: You do not need to install this app and run VPNShare on the other device</string>
	<string name="startvpnshare">Start VPNShare</string>
	<string name="stopvpnshare">Stop VPNShare</string>
    <string name="vpnsharerunning">VPNShare service running</string>
	<string name="title_permission_request">Permission granted</string>
	<string name="message_permission_request">Please, it is necessary to grant the necessary permission for the application to work correctly.</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="home">Home</string>
	<string name="about">About</string>
	<string name="settings">Settings</string>
	<string name="app_name_about_us">abcd</string>
	<string name="about_us_version">Verson</string>
	<string name="about_us_version_text">1.0</string>
	<string name="about_us_author">Author</string>
	<string name="about_us_Developer">Developer</string>
	<string name="about_us_developer_name">Khaled AGN</string>
	<string name="about_us_email">Email</string>
	<string name="about_us_email_text">contact@khaledagn.com</string>
	<string name="about_us_website">Website</string>
	<string name="about_us_website_text">www.khaledagn.com</string>
	<string name="about_us_youtube">Youtube</string>
	<string name="about_us_youtube_text">www.youtube.com/c/KhaledAGN</string>
	<string name="about_us_facebook">Facebook</string>
	<string name="about_us_facebook_text">www.facebook.com/khaledagn.me</string>
	<string name="about_us_insta">Instagram</string>
	<string name="about_us_insta_text">www.instagram.com/khaledagn</string>
	<string name="about_us_about">About</string>

</resources>
